# mono-fastapi-nestjs-sk

./: .env.example  Makefile  README.md  compose.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package.json
.uselater_github/workflows/: ci.yml  cleanup.yml  create-release.yml  deploy-production.yml  deploy-staging.yml  deploy-test.yml
apps/backend/: .env.template  Dockerfile  pyproject.toml
apps/backend/faskplusai/: api.py  config.py  database.py  logging.py  main.py  openapi.py  postgres.py  sql.py
apps/backend/faskplusai/auth/: dependencies.py  endpoints.py  repository.py  schemas.py
apps/backend/faskplusai/health/: endpoints.py
apps/backend/faskplusai/models/: __init__.py  refresh_token.py  role.py  user.py
apps/backend/faskplusai/user/: endpoints.py
apps/backend/faskplusai/utils/db/: database.py
apps/backend/faskplusai/utils/db/models/: __init__.py  base.py
apps/backend/tests/: conftest.py  test_health.py
apps/frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/chat/: page.tsx
apps/frontend/app/users/: page.tsx
apps/frontend/lib/: api.ts
apps/frontend/public/: manifest.json
scripts/: setup-server.sh
traefik/: dynamic.yml
